# udp_rust

.git_bak/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git_bak/logs/refs/heads/: master
.git_bak/logs/refs/remotes/origin/: bincode  master
.git_bak/refs/remotes/origin/: bincode  master
v1/: .gitignore  Cargo.toml  theforeawakens.sql
v1/src/: lib.rs  main.rs  router.rs  schema.rs
v1/src/controller/: enemys.rs  equipment_kinds.rs  equipments.rs  mod.rs  player_mount_equipments.rs  server_list.rs  user_assets.rs  user_equipments.rs  user_player_track.rs  user_players.rs  users.rs
v1/src/models/: blacklist.rs  chat_groups.rs  chat_groups_uids.rs  enemys.rs  equipment_kinds.rs  equipments.rs  friends.rs  gem_relateds.rs  gems.rs  link_accounts.rs  mod.rs  player_mount_equipments.rs  players.rs  server_lists.rs  servers.rs  skill_fight_relateds.rs  skills.rs  user_assets.rs  user_equipments.rs  user_player_tracks.rs  user_players.rs  users.rs
v1/src/utils/: common.rs  diesel_db.rs  helper.rs  mod.rs  redis_db.rs  router.rs  thread_pool.rs
v1/tests/: insert_default_data.rs
v1/tests/data/: default_data.rs  mod.rs
